--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,27 +29,27 @@ services:
       - "9090:9090"
     networks:
       - monitor-net
-  
-  nodeexporter:
-    image: prom/node-exporter:latest
-    container_name: nodeexporter
-    user: root
-    privileged: true
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
-    restart: unless-stopped
-    expose:
-      - 9100
-    ports:
-      - "9100:9100"
-    networks:
-      - monitor-net
+
+  # nodeexporter:
+  #   image: prom/node-exporter:latest
+  #   container_name: nodeexporter
+  #   user: root
+  #   privileged: true
+  #   volumes:
+  #     - /proc:/host/proc:ro
+  #     - /sys:/host/sys:ro
+  #     - /:/rootfs:ro
+  #   command:
+  #     - '--path.procfs=/host/proc'
+  #     - '--path.sysfs=/host/sys'
+  #     - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
+  #   restart: unless-stopped
+  #   expose:
+  #     - 9100
+  #   ports:
+  #     - "9100:9100"
+  #   networks:
+  #     - monitor-net
 
   snmp-exporter:
     image: prom/snmp-exporter
@@ -66,7 +66,7 @@ services:
   # alertmanager:
   #  image: prom/alertmanager
   #  container_name: alertmanager
-  #  volumes: 
+  #  volumes:
   #    - ./alertmanager/:/etc/alertmanager/
   #  command:
   #    - '--config.file=/etc/alertmanager/config-email.yml'
@@ -78,21 +78,21 @@ services:
   #  networks:
   #    - monitor-net
 
-  cadvisor:
-    image: google/cadvisor:latest
-    container_name: cadvisor
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:rw
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-    restart: unless-stopped
-    expose:
-      - 8080
-    ports:
-      - 8080:8080
-    networks:
-      - monitor-net
+  # cadvisor:
+  #   image: google/cadvisor:latest
+  #   container_name: cadvisor
+  #   volumes:
+  #     - /:/rootfs:ro
+  #     - /var/run:/var/run:rw
+  #     - /sys:/sys:ro
+  #     - /var/lib/docker/:/var/lib/docker:ro
+  #   restart: unless-stopped
+  #   expose:
+  #     - 8080
+  #   ports:
+  #     - 8080:8080
+  #   networks:
+  #     - monitor-net
 
   grafana:
    image: grafana/grafana:latest
@@ -101,8 +101,8 @@ services:
      - grafana_data:/var/lib/grafana
      - ./grafana/datasources:/etc/grafana/datasources
      - ./grafana/dashboards:/etc/grafana/dashboards
-     - ./grafana/setup.sh:/setup.sh
-   entrypoint: /setup.sh
+     - ./grafana/setup.sh:/etc/grafana/setup.sh
+   entrypoint: /etc/grafana/setup.sh
    environment:
      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-Passw0rd}
@@ -114,4 +114,3 @@ services:
      - 3000:3000
    networks:
      - monitor-net
-  
