--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,26 +30,26 @@ services:
     networks:
       - monitor-net
 
-  # nodeexporter:
-  #   image: prom/node-exporter:latest
-  #   container_name: nodeexporter
-  #   user: root
-  #   privileged: true
-  #   volumes:
-  #     - /proc:/host/proc:ro
-  #     - /sys:/host/sys:ro
-  #     - /:/rootfs:ro
-  #   command:
-  #     - '--path.procfs=/host/proc'
-  #     - '--path.sysfs=/host/sys'
-  #     - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
-  #   restart: unless-stopped
-  #   expose:
-  #     - 9100
-  #   ports:
-  #     - "9100:9100"
-  #   networks:
-  #     - monitor-net
+  nodeexporter:
+    image: prom/node-exporter:latest
+    container_name: nodeexporter
+    user: root
+    privileged: true
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
+    restart: unless-stopped
+    expose:
+      - 9100
+    ports:
+      - "9100:9100"
+    networks:
+      - monitor-net
 
   snmp-exporter:
     image: prom/snmp-exporter
@@ -78,21 +78,21 @@ services:
   #  networks:
   #    - monitor-net
 
-  # cadvisor:
-  #   image: google/cadvisor:latest
-  #   container_name: cadvisor
-  #   volumes:
-  #     - /:/rootfs:ro
-  #     - /var/run:/var/run:rw
-  #     - /sys:/sys:ro
-  #     - /var/lib/docker/:/var/lib/docker:ro
-  #   restart: unless-stopped
-  #   expose:
-  #     - 8080
-  #   ports:
-  #     - 8080:8080
-  #   networks:
-  #     - monitor-net
+  cadvisor:
+    image: google/cadvisor:latest
+    container_name: cadvisor
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    restart: unless-stopped
+    expose:
+      - 8080
+    ports:
+      - 8080:8080
+    networks:
+      - monitor-net
 
   grafana:
    image: grafana/grafana:latest
