Attempt to include Loki, Promtail into docker-compose.yml (fail)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ networks:
 volumes:
     prometheus_data: {}
     grafana_data: {}
+    loki_data: {}
     influxdb_data: {}
 
 services:
@@ -181,3 +182,30 @@ services:
       - 8086:8086
     networks:
       - monitor-net
+
+  # loki:
+  #   image: grafana/loki:latest
+  #   container_name: loki
+  #   # restart: unless-stopped
+  #   volumes:
+  #     - loki_data:/loki
+  #     - ./loki/config-loki.yml:/etc/loki/local-config.yml
+  #   expose:
+  #     - 3100
+  #   ports:
+  #     - 3100:3100
+  #   networks:
+  #     - monitor-net
+
+  # promtail:
+  #   image: grafana/promtail:latest
+  #   container_name: promtail
+  #   # restart: unless-stopped
+  #   volumes:
+  #     - ./promtail/config-promtail.yml:/etc/promtail/local-config.yml
+  #   expose:
+  #     - 9080
+  #   ports:
+  #     - 9080:9080
+  #   networks:
+  #     - monitor-net
