--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -96,3 +96,10 @@ scrape_configs:
     static_configs:
       - targets:
           - 10.25.103.52:8086
+
+  - job_name: 'loki'
+    scrape_interval: 60s
+    metrics_path: '/metrics'
+    static_configs:
+      - targets:
+          - 10.25.103.52:3100
