--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -150,6 +150,9 @@ services:
     restart: unless-stopped
     volumes:
       - ./telegraf/:/etc/telegraf/:ro
+      - /usr/share/snmp/mibs/:/usr/share/snmp/mibs/
+      - /var/lib/snmp/mibs/iana/:/usr/share/snmp/mibs/iana/
+      - /var/lib/snmp/mibs/ietf/:/usr/share/snmp/mibs/ietf/
     extra_hosts:
       - "vault.esma.europa.eu:51.105.229.179"
       - "trace.esma.europa.eu:51.105.229.179"
