--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -4374,49 +4374,90 @@
 #   # timeout = "30s"
 
 
-# # Retrieves SNMP values from remote agents
-# [[inputs.snmp]]
-#   ## Agent addresses to retrieve values from.
-#   ##   example: agents = ["udp://127.0.0.1:161"]
-#   ##            agents = ["tcp://127.0.0.1:161"]
-#   agents = ["udp://127.0.0.1:161"]
-#
-#   ## Timeout for each request.
-#   # timeout = "5s"
-#
-#   ## SNMP version; can be 1, 2, or 3.
-#   # version = 2
-#
-#   ## SNMP community string.
-#   # community = "public"
-#
-#   ## Number of retries to attempt.
-#   # retries = 3
-#
-#   ## The GETBULK max-repetitions parameter.
-#   # max_repetitions = 10
-#
-#   ## SNMPv3 authentication and encryption options.
-#   ##
-#   ## Security Name.
-#   # sec_name = "myuser"
-#   ## Authentication protocol; one of "MD5", "SHA", or "".
-#   # auth_protocol = "MD5"
-#   ## Authentication password.
-#   # auth_password = "pass"
-#   ## Security Level; one of "noAuthNoPriv", "authNoPriv", or "authPriv".
-#   # sec_level = "authNoPriv"
-#   ## Context Name.
-#   # context_name = ""
-#   ## Privacy protocol used for encrypted messages; one of "DES", "AES" or "".
-#   # priv_protocol = ""
-#   ## Privacy password used for encrypted messages.
-#   # priv_password = ""
-#
-#   ## Add fields and tables defining the variables you wish to collect.  This
-#   ## example collects the system uptime and interface variables.  Reference the
-#   ## full plugin documentation for configuration details.
+# Retrieves SNMP values from remote agents
+[[inputs.snmp]]
+  # Agent addresses to retrieve values from.
+  #   example: agents = ["udp://127.0.0.1:161"]
+  #            agents = ["tcp://127.0.0.1:161"]
+  agents = ["udp://10.24.18.3:161"]
 
+  # Timeout for each request.
+  timeout = "5s"
+
+  # SNMP version; can be 1, 2, or 3.
+  version = 2
+
+  # SNMP community string.
+  community = "UniSystems2015"
+
+  # Number of retries to attempt.
+  retries = 3
+
+  # The GETBULK max-repetitions parameter.
+  max_repetitions = 10
+
+  ## SNMPv3 authentication and encryption options.
+  ##
+  ## Security Name.
+  # sec_name = "myuser"
+  ## Authentication protocol; one of "MD5", "SHA", or "".
+  # auth_protocol = "MD5"
+  ## Authentication password.
+  # auth_password = "pass"
+  ## Security Level; one of "noAuthNoPriv", "authNoPriv", or "authPriv".
+  # sec_level = "authNoPriv"
+  ## Context Name.
+  # context_name = ""
+  ## Privacy protocol used for encrypted messages; one of "DES", "AES" or "".
+  # priv_protocol = ""
+  ## Privacy password used for encrypted messages.
+  # priv_password = ""
+
+  ## Add fields and tables defining the variables you wish to collect.  This
+  ## example collects the system uptime and interface variables.  Reference the
+  ## full plugin documentation for configuration details.
+  [[inputs.snmp.field]]
+    name = "hostname"
+    oid = ".1.0.0.1.1"
+  [[inputs.snmp.field]]
+    name = "uptime"
+    oid = ".1.0.0.1.2"
+
+  # IF-MIB::ifTable contains counters on input and output traffic as well as errors and discards.
+  [[inputs.snmp.table]]
+    name = "interface"
+    inherit_tags = [ "hostname" ]
+    oid = "IF-MIB::ifTable"
+
+    # Interface tag - used to identify interface in metrics database
+    [[inputs.snmp.table.field]]
+      name = "ifDescr"
+      oid = "IF-MIB::ifDescr"
+      is_tag = true
+
+  # IF-MIB::ifXTable contains newer High Capacity (HC) counters that do not overflow as fast for a few of the ifTable counters
+  [[inputs.snmp.table]]
+    name = "interface"
+    inherit_tags = [ "hostname" ]
+    oid = "IF-MIB::ifXTable"
+
+    # Interface tag - used to identify interface in metrics database
+    [[inputs.snmp.table.field]]
+      name = "ifDescr"
+      oid = "IF-MIB::ifDescr"
+      is_tag = true
+
+  # EtherLike-MIB::dot3StatsTable contains detailed ethernet-level information about what kind of errors have been logged on an interface (such as FCS error, frame too long, etc)
+  [[inputs.snmp.table]]
+    name = "interface"
+    inherit_tags = [ "hostname" ]
+    oid = "EtherLike-MIB::dot3StatsTable"
+
+    # Interface tag - used to identify interface in metrics database
+    [[inputs.snmp.table.field]]
+      name = "ifDescr"
+      oid = "IF-MIB::ifDescr"
+      is_tag = true
 
 # # DEPRECATED! PLEASE USE inputs.snmp INSTEAD.
 # [[inputs.snmp_legacy]]
