Add loki, blackboxexporter

--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -109,7 +109,7 @@
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
   # urls = ["udp://127.0.0.1:8089"]
-  urls = ["http://10.25.103.52:8086"]
+  urls = ["http://influxdb:8086"]
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
@@ -4375,26 +4375,26 @@
 
 
 # Retrieves SNMP values from remote agents
-[[inputs.snmp]]
+# [[inputs.snmp]]
   # Agent addresses to retrieve values from.
   #   example: agents = ["udp://127.0.0.1:161"]
   #            agents = ["tcp://127.0.0.1:161"]
-  agents = ["udp://10.24.18.3:161"]
+  # agents = ["udp://10.24.18.3:161"]
 
   # Timeout for each request.
-  timeout = "5s"
+  # timeout = "5s"
 
   # SNMP version; can be 1, 2, or 3.
-  version = 2
+  # version = 2
 
   # SNMP community string.
-  community = "UniSystems2015"
+  # community = "UniSystems2015"
 
   # Number of retries to attempt.
-  retries = 3
+  # retries = 3
 
   # The GETBULK max-repetitions parameter.
-  max_repetitions = 10
+  # max_repetitions = 10
 
   ## SNMPv3 authentication and encryption options.
   ##
@@ -4416,48 +4416,48 @@
   ## Add fields and tables defining the variables you wish to collect.  This
   ## example collects the system uptime and interface variables.  Reference the
   ## full plugin documentation for configuration details.
-  [[inputs.snmp.field]]
-    name = "hostname"
-    oid = ".1.0.0.1.1"
-  [[inputs.snmp.field]]
-    name = "uptime"
-    oid = ".1.0.0.1.2"
+  # [[inputs.snmp.field]]
+    # name = "hostname"
+    # oid = ".1.0.0.1.1"
+  # [[inputs.snmp.field]]
+    # name = "uptime"
+    # oid = ".1.0.0.1.2"
 
   # IF-MIB::ifTable contains counters on input and output traffic as well as errors and discards.
-  [[inputs.snmp.table]]
-    name = "interface"
-    inherit_tags = [ "hostname" ]
-    oid = "IF-MIB::ifTable"
+  # [[inputs.snmp.table]]
+    # name = "interface"
+    # inherit_tags = [ "hostname" ]
+    # oid = "IF-MIB::ifTable"
 
     # Interface tag - used to identify interface in metrics database
-    [[inputs.snmp.table.field]]
-      name = "ifDescr"
-      oid = "IF-MIB::ifDescr"
-      is_tag = true
+    # [[inputs.snmp.table.field]]
+      # name = "ifDescr"
+      # oid = "IF-MIB::ifDescr"
+      # is_tag = true
 
   # IF-MIB::ifXTable contains newer High Capacity (HC) counters that do not overflow as fast for a few of the ifTable counters
-  [[inputs.snmp.table]]
-    name = "interface"
-    inherit_tags = [ "hostname" ]
-    oid = "IF-MIB::ifXTable"
+  # [[inputs.snmp.table]]
+    # name = "interface"
+    # inherit_tags = [ "hostname" ]
+    # oid = "IF-MIB::ifXTable"
 
     # Interface tag - used to identify interface in metrics database
-    [[inputs.snmp.table.field]]
-      name = "ifDescr"
-      oid = "IF-MIB::ifDescr"
-      is_tag = true
+    # [[inputs.snmp.table.field]]
+      # name = "ifDescr"
+      # oid = "IF-MIB::ifDescr"
+      # is_tag = true
 
   # EtherLike-MIB::dot3StatsTable contains detailed ethernet-level information about what kind of errors have been logged on an interface (such as FCS error, frame too long, etc)
-  [[inputs.snmp.table]]
-    name = "interface"
-    inherit_tags = [ "hostname" ]
-    oid = "EtherLike-MIB::dot3StatsTable"
+  # [[inputs.snmp.table]]
+    # name = "interface"
+    # inherit_tags = [ "hostname" ]
+    # oid = "EtherLike-MIB::dot3StatsTable"
 
     # Interface tag - used to identify interface in metrics database
-    [[inputs.snmp.table.field]]
-      name = "ifDescr"
-      oid = "IF-MIB::ifDescr"
-      is_tag = true
+    # [[inputs.snmp.table.field]]
+      # name = "ifDescr"
+      # oid = "IF-MIB::ifDescr"
+      # is_tag = true
 
 # # DEPRECATED! PLEASE USE inputs.snmp INSTEAD.
 # [[inputs.snmp_legacy]]
@@ -6446,13 +6446,13 @@
 
 
 # Read metrics from VMware vCenter
-[[inputs.vsphere]]
+# [[inputs.vsphere]]
   ## List of vCenter URLs to be monitored. These three lines must be uncommented
   ## and edited for the plugin to work.
-  vcenters = [ "https://192.168.130.51/sdk" ]
+  ## vcenters = [ "https://192.168.130.51/sdk" ]
 #  vcenters = [ "https://192.168.130.51" ]
-  username = "root"
-  password = "P@ssw0rd"
+  ## username = "root"
+  ## password = "P@ssw0rd"
 #
 #   ## VMs
 #   ## Typical VM metrics (if omitted or empty, all metrics are collected)
@@ -6623,7 +6623,7 @@
 #   # ssl_cert = "/path/to/certfile"
 #   # ssl_key = "/path/to/keyfile"
   ## Use SSL but skip chain & host verification
-  insecure_skip_verify = true
+  ## insecure_skip_verify = true
 
 
 # # A Webhooks Event collector
