--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -16,6 +16,40 @@ global:
 #   - "alert.rules"
 
 scrape_configs:
+
+  - job_name: 'nautobot_app'
+    metrics_path: /api/plugins/capacity-metrics/app-metrics
+    static_configs:
+      # - targets: ['nautobot:8080']
+      - targets:
+          - 'nautobot-12-nautobot-1:8080'
+          - 'cu-grape-nautobot-nautobot-1:8080'
+
+  - job_name: 'nautobot_queue'
+    metrics_path: /api/plugins/capacity-metrics/rq-metrics
+    static_configs:
+      - targets:
+          - 'nautobot-12-nautobot-1:8080'
+          - 'cu-grape-nautobot-nautobot-1:8080'
+
+  - job_name: 'blackbox'
+    metrics_path: /probe
+    params:
+      module: [http_2xx]  # Look for a HTTP 200 response.
+    static_configs:
+      - targets:
+        - http://prometheus.io    # Target to probe with http.
+        - https://prometheus.io   # Target to probe with https.
+        - https://unisystems.gr   # Target to probe with http on port 8080.
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: 'blackboxexporter:9115'  # The blackbox exporter's real hostname:port.
+        # replacement: ['172.19.29.205:9115']  # The blackbox exporter's real hostname:port.
+
   - job_name: 'prometheus'
     static_configs:
       - targets: ['prometheus:9090']
@@ -29,59 +63,57 @@ scrape_configs:
     scrape_interval: 30s
     metrics_path: /metrics
     static_configs:
-      - targets:
-#           - 10.25.100.79:9182
-          - 10.25.103.52:9100
-#           - 10.25.103.7:9100
+      - targets: ['nodeexporter:9100']
+          # - 172.19.29.205:9100
 
   - job_name: cadvisor
     scrape_interval: 5s
     static_configs:
-      - targets:
-          - 10.25.103.52:8080
+      - targets: ['cadvisor:8080']
+          # - 172.19.29.205::8080
 
-  - job_name: 'snmp'
-    scrape_interval: 30s
-    metrics_path: /snmp
-    params:
-      module: [if_mib_ifdescr]
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: snmpexporter:9116
-    static_configs:
-      - targets:
-          - 10.25.251.1
-          - 192.168.130.7
-          - 192.168.130.8
-          - 192.168.130.9
-          - 192.168.130.10
-          - 192.168.130.11
-          - 192.168.130.12
-          - 192.168.130.13
-          - 192.168.130.14
-          - 192.168.130.6
-          - 192.168.130.31
-          - 192.168.130.33
-          - 192.168.130.30
-          - 192.168.130.23
-          - 192.168.130.26
-          - 192.168.130.27
-          - 192.168.130.21
-          - 192.168.130.22
-          - 192.168.130.20
-          - 192.168.130.25
-          - 192.168.130.29
-          - 192.168.130.19
-          - 192.168.130.18
-          - 192.168.130.17
-          - 192.168.130.16
-          - 192.168.130.32
-          - 192.168.130.28
-          - 192.168.130.35
+  # - job_name: 'snmp'
+  #   scrape_interval: 30s
+  #   metrics_path: /snmp
+  #   params:
+  #     module: [if_mib_ifdescr]
+  #   relabel_configs:
+  #     - source_labels: [__address__]
+  #       target_label: __param_target
+  #     - source_labels: [__param_target]
+  #       target_label: instance
+  #     - target_label: __address__
+  #       replacement: 'snmpexporter:9116'
+  #   static_configs:
+  #     - targets:
+  #         - 10.25.251.1
+  #         - 192.168.130.7
+  #         - 192.168.130.8
+  #         - 192.168.130.9
+  #         - 192.168.130.10
+  #         - 192.168.130.11
+  #         - 192.168.130.12
+  #         - 192.168.130.13
+  #         - 192.168.130.14
+  #         - 192.168.130.6
+  #         - 192.168.130.31
+  #         - 192.168.130.33
+  #         - 192.168.130.30
+  #         - 192.168.130.23
+  #         - 192.168.130.26
+  #         - 192.168.130.27
+  #         - 192.168.130.21
+  #         - 192.168.130.22
+  #         - 192.168.130.20
+  #         - 192.168.130.25
+  #         - 192.168.130.29
+  #         - 192.168.130.19
+  #         - 192.168.130.18
+  #         - 192.168.130.17
+  #         - 192.168.130.16
+  #         - 192.168.130.32
+  #         - 192.168.130.28
+  #         - 192.168.130.35
 
 
 #  - job_name: 'checkpoint'
@@ -96,33 +128,33 @@ scrape_configs:
     metrics_path: '/metrics'
     honor_labels: true
     static_configs:
-      - targets:
-          - 10.25.103.52:9091
+      - targets: ['pushgateway:9091']
+          # - 172.19.29.205::9091
 
-  - job_name: 'vmware'
-    scrape_interval: 60s
-    metrics_path: '/metrics'
-    static_configs:
-      - targets:
-          - 10.25.103.52:9512
+#   - job_name: 'vmware'
+#     scrape_interval: 60s
+#     metrics_path: '/metrics'
+#     static_configs:
+#       - targets: ['vmware-exporter:9512']
+#           # - 172.19.29.205::9512
 
   - job_name: 'telegraf'
     scrape_interval: 60s
     metrics_path: '/metrics'
     static_configs:
-      - targets:
-          - 10.25.103.52:9273
+      - targets: ['telegraf:9273']
+          # - 172.19.29.205::9273
 
   - job_name: 'influxdb'
     scrape_interval: 60s
     metrics_path: '/metrics'
     static_configs:
-      - targets:
-          - 10.25.103.52:8086
+      - targets: ['influxdb:8086']
+          # - 172.19.29.205::8086
 
   - job_name: 'loki'
     scrape_interval: 60s
     metrics_path: '/metrics'
     static_configs:
-      - targets:
-          - 10.25.103.52:3100
+      - targets: ['loki:3100']
+          # - 172.19.29.205::3100
