--- a/promtail/config-promtail.yml
+++ b/promtail/config-promtail.yml
@@ -6,9 +6,11 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://10.25.103.52:3100/loki/api/v1/push
+  - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
+
+  # Get logs from syslog-ng
   - job_name: syslog
     syslog:
       listen_address: localhost:1514
@@ -18,6 +20,7 @@ scrape_configs:
     - source_labels: ['__syslog_message_hostname']
       target_label: 'hostname'
       
+  # Get localhost logs
   - job_name: system
     static_configs:
     - targets:
@@ -25,3 +28,12 @@ scrape_configs:
       labels:
         job: varlogs
         __path__: /var/log/*log
+
+  # Get docker logs
+  - job_name: docker 
+    pipeline_stages:
+      - docker: {}
+    static_configs:
+      - labels:
+          job: docker
+          __path__: /var/lib/docker/containers/*/*-json.log
